bugfix: deposit items not aligned on high res

--- a/styles/_mainSection.scss
+++ b/styles/_mainSection.scss
@@ -100,7 +100,7 @@
         @include for-size(desktop-up) {
             padding: $desktopPadding;
             margin-top: 1em;
-            // text-align: center;
+            text-align: center;
         }
 
         .deposit-item {
@@ -139,7 +139,7 @@
             @include for-size(desktop-up) {
                 width: 33%;
                 text-align: left;
-                margin-left: 0.5em;
+                margin-left: -1.5em;
                 padding: 0;
             }
             div {
