--- a/styles/style.css
+++ b/styles/style.css
@@ -222,6 +222,7 @@ header .log-in {
   .main-content .deposits {
     padding: 0 25%;
     margin-top: 1em;
+    text-align: center;
   }
 }
 
@@ -272,7 +273,7 @@ header .log-in {
   .main-content .deposits .deposit-title {
     width: 33%;
     text-align: left;
-    margin-left: 0.5em;
+    margin-left: -1.5em;
     padding: 0;
   }
 }
